Archive/6c9007752967263867d5496589ccdac6-7063104e283ed82d51a6fde7370c6e59/output
main.cpp:5:1: error: stray '\342' in program
 printf(“ingrese una letra entre a-d”);
 ^
main.cpp:5:1: error: stray '\200' in program
main.cpp:5:1: error: stray '\234' in program
main.cpp:5:1: error: stray '\342' in program
main.cpp:5:1: error: stray '\200' in program
main.cpp:5:1: error: stray '\235' in program
main.cpp:6:1: error: stray '\342' in program
 scanf(“%c”,&letra);
 ^
main.cpp:6:1: error: stray '\200' in program
main.cpp:6:1: error: stray '\234' in program
main.cpp:6:1: error: stray '\342' in program
main.cpp:6:1: error: stray '\200' in program
main.cpp:6:1: error: stray '\235' in program
main.cpp:9:1: error: stray '\342' in program
 case ‘a’: printf(“Escogiste la letra a”);
 ^
main.cpp:9:1: error: stray '\200' in program
main.cpp:9:1: error: stray '\230' in program
main.cpp:9:1: error: stray '\342' in program
main.cpp:9:1: error: stray '\200' in program
main.cpp:9:1: error: stray '\231' in program
main.cpp:9:1: error: stray '\342' in program
main.cpp:9:1: error: stray '\200' in program
main.cpp:9:1: error: stray '\234' in program
main.cpp:9:1: error: stray '\342' in program
main.cpp:9:1: error: stray '\200' in program
main.cpp:9:1: error: stray '\235' in program
main.cpp:11:1: error: stray '\342' in program
 case ‘b’: printf(“Escogiste la letra b”);
 ^
main.cpp:11:1: error: stray '\200' in program
main.cpp:11:1: error: stray '\230' in program
main.cpp:11:1: error: stray '\342' in program
main.cpp:11:1: error: stray '\200' in program
main.cpp:11:1: error: stray '\231' in program
main.cpp:11:1: error: stray '\342' in program
main.cpp:11:1: error: stray '\200' in program
main.cpp:11:1: error: stray '\234' in program
main.cpp:11:1: error: stray '\342' in program
main.cpp:11:1: error: stray '\200' in program
main.cpp:11:1: error: stray '\235' in program
main.cpp:13:1: error: stray '\342' in program
 case ‘c’: printf(“Escogiste la letra c”);
 ^
main.cpp:13:1: error: stray '\200' in program
main.cpp:13:1: error: stray '\230' in program
main.cpp:13:1: error: stray '\342' in program
main.cpp:13:1: error: stray '\200' in program
main.cpp:13:1: error: stray '\231' in program
main.cpp:13:1: error: stray '\342' in program
main.cpp:13:1: error: stray '\200' in program
main.cpp:13:1: error: stray '\234' in program
main.cpp:13:1: error: stray '\342' in program
main.cpp:13:1: error: stray '\200' in program
main.cpp:13:1: error: stray '\235' in program
main.cpp:15:1: error: stray '\342' in program
 default:printf(“Solo las opciones son a,b,c, y d);
 ^
main.cpp:15:1: error: stray '\200' in program
main.cpp:15:1: error: stray '\234' in program
main.cpp: In function 'int main()':
main.cpp:5:11: error: 'ingrese' was not declared in this scope
 printf(“ingrese una letra entre a-d”);
           ^
main.cpp:6:10: error: expected primary-expression before '%' token
 scanf(“%c”,&letra);
          ^
main.cpp:6:11: error: 'c' was not declared in this scope
 scanf(“%c”,&letra);
           ^
main.cpp:9:9: error: 'a' was not declared in this scope
 case ‘a’: printf(“Escogiste la letra a”);
         ^
main.cpp:9:25: error: 'Escogiste' was not declared in this scope
 case ‘a’: printf(“Escogiste la letra a”);
                         ^
main.cpp:11:9: error: 'b' was not declared in this scope
 case ‘b’: printf(“Escogiste la letra b”);
         ^
main.cpp:11:35: error: expected ')' before 'la'
 case ‘b’: printf(“Escogiste la letra b”);
                                   ^
main.cpp:13:9: error: the value of 'c' is not usable in a constant expression
 case ‘c’: printf(“Escogiste la letra c”);
         ^
main.cpp:6:11: note: 'c' was not declared 'constexpr'
 scanf(“%c”,&letra);
           ^
main.cpp:13:35: error: expected ')' before 'la'
 case ‘c’: printf(“Escogiste la letra c”);
                                   ^
main.cpp:15:19: error: 'Solo' was not declared in this scope
 default:printf(“Solo las opciones son a,b,c, y d);
                   ^
main.cpp:15:48: error: 'y' was not declared in this scope
 default:printf(“Solo las opciones son a,b,c, y d);
                                                ^
